--- a/TableTesting/en.lproj/MainStoryboard.storyboard
+++ b/TableTesting/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -12,8 +12,9 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IsA-Ec-wa1">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="IsA-Ec-wa1">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <color key="backgroundColor" red="0.16862745579999999" green="0.16862745579999999" blue="0.16862745579999999" alpha="1" colorSpace="deviceRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="HeaderCell" id="D1R-yI-RU7" customClass="HeaderCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
@@ -31,22 +32,26 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="292"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33U-ei-fFI">
+                                                <webView contentMode="scaleToFill" id="33U-ei-fFI">
+                                                    <rect key="frame" x="55" y="25" width="210" height="137"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="257" id="Ddu-xq-3O0"/>
-                                                        <constraint firstAttribute="width" constant="260" id="ri8-RV-MP8"/>
-                                                    </constraints>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="2" id="Kkq-F2-UNU"/>
+                                                    </connections>
                                                 </webView>
+                                                <view contentMode="scaleToFill" id="hK0-Ot-3eT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="292"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.16862745579999999" green="0.16862745579999999" blue="0.16862745579999999" alpha="1" colorSpace="deviceRGB"/>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="33U-ei-fFI" secondAttribute="trailing" constant="20" type="default" id="GXr-c7-YjU"/>
-                                            <constraint firstItem="33U-ei-fFI" firstAttribute="top" secondItem="qnL-we-dCN" secondAttribute="top" constant="15" id="zwq-st-adD"/>
-                                        </constraints>
+                                        <color key="backgroundColor" red="0.16862745579999999" green="0.16862745579999999" blue="0.16862745579999999" alpha="1" colorSpace="deviceRGB"/>
                                         <connections>
                                             <outlet property="contentView" destination="33U-ei-fFI" id="wri-va-80y"/>
+                                            <outlet property="placeholder" destination="hK0-Ot-3eT" id="A32-mx-8uP"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -56,13 +61,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="IsA-Ec-wa1" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="PGl-YY-dvO"/>
-                            <constraint firstItem="IsA-Ec-wa1" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="UyN-GX-sTC"/>
-                            <constraint firstItem="IsA-Ec-wa1" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="X07-pM-FrF"/>
-                            <constraint firstItem="IsA-Ec-wa1" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="efQ-VO-zMn"/>
-                        </constraints>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="IsA-Ec-wa1" id="nYA-ll-Kah"/>
@@ -77,13 +76,11 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ContentCell.h"/>
             <relationships>
                 <relationship kind="outlet" name="contentView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="placeholder" candidateClass="UIView"/>
             </relationships>
         </class>
         <class className="HeaderCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HeaderCell.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
